--- a/install.html
+++ b/install.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تثبيت منصة التمساحية</title>
+  <title>تثبيت تطبيق منصة التمساحية</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="manifest.json">
@@ -40,11 +40,8 @@
 <body>
 
 <div class="box">
-  <h2>📲 تثبيت منصة التمساحية</h2>
-  <p>
-    اضغط الزر بالأسفل لتثبيت التطبيق  
-    <br>على هاتفك
-  </p>
+  <h2>📲 منصة التمساحية التعليمية </h2>
+ 
 
   <button id="installBtn" style="display:none">
     ⬇️ تثبيت التطبيق
