--- a/install.html
+++ b/install.html
@@ -2,8 +2,8 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>منصة التمساحية</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <title>تثبيت منصة التمساحية</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#2563eb">
@@ -19,59 +19,59 @@
       justify-content: center;
       align-items: center;
       padding: 16px;
-      box-sizing: border-box;
     }
 
     .box {
       background: #ffffff;
       width: 100%;
       max-width: 360px;
-      border-radius: 18px;
-      padding: 24px 20px;
+      border-radius: 20px;
+      padding: 26px 22px;
       text-align: center;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.25);
+      box-shadow: 0 15px 35px rgba(0,0,0,0.25);
     }
 
     h2 {
-      margin: 0 0 12px;
-      font-size: 20px;
+      margin: 0 0 14px;
+      font-size: 21px;
       color: #1e40af;
     }
 
     p {
-      margin: 0 0 16px;
-      font-size: 14.5px;
-      line-height: 1.6;
+      margin: 0 0 18px;
+      font-size: 15px;
+      line-height: 1.7;
       color: #334155;
     }
 
     button {
       width: 100%;
-      font-size: 16px;
-      padding: 14px;
-      border-radius: 12px;
+      font-size: 17px;
+      padding: 15px;
+      border-radius: 14px;
       border: none;
-      background: #2563eb;
+      background: linear-gradient(90deg, #2563eb, #1e40af);
       color: white;
       font-weight: bold;
       cursor: pointer;
+      box-shadow: 0 6px 15px rgba(37,99,235,0.4);
     }
 
     button:active {
-      transform: scale(0.98);
+      transform: scale(0.97);
     }
 
     .hint {
-      margin-top: 14px;
-      font-size: 13px;
+      margin-top: 16px;
+      font-size: 14px;
       color: #64748b;
-      line-height: 1.5;
+      line-height: 1.6;
     }
 
     .success {
       display: none;
-      margin-top: 18px;
-      font-size: 15px;
+      margin-top: 20px;
+      font-size: 16px;
       color: #16a34a;
       line-height: 1.6;
       font-weight: bold;
@@ -81,27 +81,28 @@
 <body>
 
 <div class="box">
-  <h2>👋 مرحبًا بك في منصة التمساحية</h2>
+  <h2>👋 أهلًا بك في منصة التمساحية</h2>
 
   <p id="desc">
-    يمكنك إضافة المنصة إلى هاتفك  
-    لمتابعة دروسك بسهولة في أي وقت
+    ثبّت المنصة على هاتفك  
+    <br>
+    علشان تتابع دروسك بسهولة ومن غير تعب
   </p>
 
   <button id="installBtn" style="display:none">
-    📲 إضافة المنصة إلى الهاتف
+    ⬇️ تثبيت المنصة على الهاتف
   </button>
 
   <div id="successMsg" class="success">
-    🎉 تم الإعداد بنجاح  
+    🎉 تم تثبيت المنصة بنجاح  
     <br>
-    يمكنك الآن بدء التعلم
+    ابدأ التعلّم الآن 🚀
   </div>
 
   <div id="hint" class="hint">
-    قد تظهر رسالة التثبيت تلقائيًا  
+    الخطوة بسيطة جدًا  
     <br>
-    فقط اتبع الخطوات التي تظهر على الشاشة
+    كم ثانية وتكون المنصة جاهزة عندك ✨
   </div>
 </div>
 
